Updated by task 'FY25_January_DX_RNs_HO1'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/8cbb1bff56f6f664dd2c46c0fc53b04909761992

--- a/c-legacy-releases/2024/10232024.md
+++ b/c-legacy-releases/2024/10232024.md
@@ -5,14 +5,15 @@ doc-type: release notes
 last-update: November 2024
 author: mfrei
 mini-toc-levels: 2
-source-git-commit: 824440243c1fc451b69a9858bc5c7a58303e139e
-workflow-type: tm+mt
+exl-id: 4648ffe4-470d-4334-9b65-fe5267bdfcf5
+source-git-commit: 56e9b4705f1ca234040ce41388876adf74addcb3
+workflow-type: ht
 source-wordcount: '4644'
-ht-degree: 93%
+ht-degree: 100%
 
 ---
 
-# Experience Cloud版本注意事項 — 2024年11月/12月
+# Experience Cloud 發行說明 - 2024 年 11 月/12 月
 
 <!-- badgeReview: label="Internal Review" type="Negative" -->
 
@@ -27,21 +28,21 @@ ht-degree: 93%
 
 為了獲得最佳的自助體驗，請登入 [Experience League](https://experienceleague.adobe.com/#home)，並在 Adobe 免費的[文件](https://experienceleague.adobe.com/zh-hant/docs)、[課程](https://experienceleague.adobe.com/#courses)、[活動](https://experienceleague.adobe.com/events/)、[社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=en)和[支援](https://experienceleague.adobe.com/?support-tab=home#support)等資源庫中自訂您的搜尋體驗。
 
-**提供意見回饋：**&#x200B;尋找&#x200B;**_此內容是否有幫助？_**」。您的意見回饋會經過剪輯並傳送給內容作者。
+**留下意見反應：**&#x200B;尋找「**_這些內容對您有幫助嗎？_**」。您的意見反應會經過整理後傳遞給內容作者。
 
-**取得通知：**&#x200B;若要收到關於此頁面更新的每月電子郵件通知，請訂閱[Adobe優先產品更新](https://www.adobe.com/tw/subscription/priority-product-update.html)。
+**取得通知：**&#x200B;若要收到關於此頁面更新的每月電子郵件通知，請訂閱 [Adobe 優先產品更新](https://www.adobe.com/tw/subscription/priority-product-update.html)。
 
-**2024年11月/12月**
+**2024 年 11 月/12 月**
 
-最近更新： **2024年12月16日**
+最新更新：**2024 年 12 月 16 日**
 
-* [[!DNL Experience League] 事件和更新](#events) （**12月16日**）
+* [[!DNL Experience League] 活動和更新](#events) (**12 月 16 日**)
 * [[!DNL Adobe System Status]](#status)
 * [[!DNL Adobe Experience Cloud] - 統一介面與管理](#ecloud)
 * [[!DNL Adobe Experience Platform]](#platform)
 * [[!DNL Adobe Real-Time CDP]](#rtcdp)
-* [[!DNL Adobe Analytics]](#analytics) （最新版本： **10月23日**）
-* [[!DNL Adobe Customer Journey Analytics]](#cja) （最新版本： **10月23日**）
+* [[!DNL Adobe Analytics]](#analytics)最新發行日期：**10 月 23 日**)
+* [[!DNL Adobe Customer Journey Analytics]](#cja)最新發行日期：**10 月 23 日**)
 * [[!DNL Adobe Streaming Media Analytics]](#sma)
 * [[!DNL Adobe Experience Manager]](#aem)
 * [[!DNL Adobe Commerce]](#commerce)
@@ -63,22 +64,22 @@ ht-degree: 93%
 * [Adobe 的認證](https://experienceleague.adobe.com/en/certification-home)
 * [Adobe 產品安全性漏洞](https://helpx.adobe.com/tw/security.html)
 
-## [!DNL Experience League]個更新與活動 {#events}
+## [!DNL Experience League] 更新和活動 {#events}
 
 了解 Experience League 上的精彩活動。 若要向 Adobe 產品專家學習、與之互動或獲得解答，這是您絕佳的選擇！
 
-### Experience League的更新
+### Experience League 更新
 
 +++詳細資訊
 
-更新： **2024年11月22日**
+更新日期：**2024 年 11 月 22 日**
 
-**目錄更新：**&#x200B;已對Experience League中的每個目錄進行下列更新：
+**目錄更新：**&#x200B;已對 Experience League 中的每個目錄進行以下更新：
 
-* **[!UICONTROL 展開所有區段]**：在任何Experience League指南上顯示整個目錄。 (此切換會在頁面載入後關閉。 此問題將在未來的更新中修正。) 已移除&#x200B;**[!UICONTROL 檢視更多]**&#x200B;和&#x200B;**[!UICONTROL 檢視更少]**&#x200B;選項。
-* **捲動**：啟用捲動長目錄。
-* **[!UICONTROL 依關鍵字篩選]**：可讓您輸入關鍵字來篩選目錄專案。 下拉式清單會顯示相關結果，您可以按一下「清除&#x200B;**[!UICONTROL 」]**&#x200B;來清除篩選器。
-* **使用中頁面可見性**：使用中頁面一律會在目錄中反白顯示。
+* **[!UICONTROL 展開所有區段]**：在任何 Experience League 指南中顯示完整的目錄。(此切換按鈕會在頁面載入後自動關閉。此問題將在未來的更新中修復。)「**[!UICONTROL 檢視更多]**」和「**[!UICONTROL 檢視較少]**」選項已移除。
+* **捲動**：啟用捲動以瀏覽長目錄。
+* **[!UICONTROL 按關鍵字篩選]**：讓您透過輸入關鍵字來篩選目錄中的項目。下拉式清單會顯示相關結果，您可以按一下「**[!UICONTROL 清除]**」來清除篩選器。
+* **活動頁面可見度**：活動頁面在目錄中始終會醒目顯示。
 
 ### Experience League 上的播放清單
 
@@ -133,7 +134,7 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 
 +++詳細資訊
 
-為了更方便控制Experience Cloud產品使用資料偏好設定，我們簡化了Experience Cloud偏好設定頁面，以移除重複選項。 為簡化起見，我們保留目前的使用者偏好設定，您可以隨時在https://experience.adobe.com/preferences更新您的偏好設定。
+為了讓控制 Experience Cloud 產品使用資料喜好設定變得更簡單，我們簡化了 Experience Cloud 喜好設定頁面，移除了重複的選項。為了簡化操作，我們保留了目前的使用者喜好設定，您可以隨時在以下網址更新您的喜好設定：https://experience.adobe.com/preferences.
 
 | 發行日期 | 功能 | 說明 |
 | -----------| -----------| ---------- |
@@ -145,7 +146,7 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 
 ## [!DNL Experience Platform] {#platform}
 
-尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。查看 Experience League 上的新教學課程和知識庫。
+尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。檢視 Experience League 上的新教學課程和知識庫。
 
 +++詳細資訊
 
@@ -190,7 +191,7 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 
 +++詳細資訊
 
-[!DNL Analytics]發行日期： **2024年10月23日**
+[!DNL Analytics]發行日期：**2024 年 10 月 23 日**
 
 * [!DNL Analytics] [發行說明](https://experienceleague.adobe.com/zh-hant/docs/analytics/release-notes/latest)<!-- (https://experienceleague-review.corp.adobe.com/docs/analytics/release-notes/latest.html) -->
 
@@ -228,7 +229,7 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 
 +++詳細資訊
 
-[!DNL Customer Journey Analytics]發行日期： **2024年10月23日**
+[!DNL Customer Journey Analytics]發行日期：**2024 年 10 月 23 日**
 
 * [!DNL Customer Journey Analytics] [發行說明](https://experienceleague.adobe.com/zh-hant/docs/analytics-platform/using/releases/latest#releases)<!-- [release notes](https://experienceleague-review.corp.adobe.com/docs/analytics-platform/using/releases/latest.html) -->
 
@@ -325,9 +326,9 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2024 年 11 月 | [設定值](https://experienceleague.adobe.com/en/docs/commerce-learn/tutorials/adobe-commerce-cloud/troubleshooting/config-values) | 影片 | 瞭解如何使用`core_config_data`、XML檔案和管理設定，在Adobe Commerce中尋找、驗證和管理組態值。 |
-| 2024 年 11 月 | [解決常見錯誤](https://experienceleague.adobe.com/en/docs/commerce-learn/tutorials/adobe-commerce-cloud/troubleshooting/config-values) | 影片 | 解決兩個阻止網站載入的常見Adobe Cloud專案錯誤。 |
-| 2024 年 11 月 | [過期的SSL憑證](https://experienceleague.adobe.com/en/docs/commerce-learn/tutorials/adobe-commerce-cloud/troubleshooting/invalid-ssl) | 影片 | 瞭解如何識別過期的ssl憑證，以及如何為Adobe Commerce Cloud整合或其他開發環境重新產生一個憑證。 |
+| 2024 年 11 月 | [設定值](https://experienceleague.adobe.com/zh-hant/docs/commerce-learn/tutorials/adobe-commerce-cloud/troubleshooting/config-values) | 影片 | 學習如何使用 `core_config_data`、XML 檔案和管理設定來定位、驗證和管理 Adobe Commerce 的設定值。 |
+| 2024 年 11 月 | [解決常見的錯誤](https://experienceleague.adobe.com/zh-hant/docs/commerce-learn/tutorials/adobe-commerce-cloud/troubleshooting/config-values) | 影片 | 解決兩個常見的 Adobe Cloud 專案錯誤，這些錯誤會阻止網站載入。 |
+| 2024 年 11 月 | [到期的 SSL 憑證](https://experienceleague.adobe.com/zh-hant/docs/commerce-learn/tutorials/adobe-commerce-cloud/troubleshooting/invalid-ssl) | 影片 | 了解如何識別過期的 SSL 憑證，然後如何重新產生一個適用於 Adobe Commerce Cloud 整合或其他開發環境的憑證。 |
 | 2024 年 10 月 | [Adobe Commerce](https://experienceleague.adobe.com/zh-hant/docs/commerce-learn/tutorials/getting-started/migrating-to-adobe-commerce/qa/code-freeze) | 多部影片 | 觀看關於 Commerce 市場結構、全球交付模式、管理員角色、店面選項等的新視訊。 |
 | 2024 年 10 月 | [遷移至 Adobe Commerce](https://experienceleague.adobe.com/zh-hant/docs/commerce-learn/tutorials/getting-started/migrating-to-adobe-commerce/overview) | 影片 | 涵蓋遷移至 Adobe Commerce 時的準備工作、自訂程式碼、QA、效能和安全性的概述。 |
 | 2024 年 10 月 | [使用 cli 重設管理員 URL](https://experienceleague.adobe.com/zh-hant/docs/commerce-learn/tutorials/admin/reset-admin-uri) | 影片 | 了解如何使用 Adobe Commerce Cloud cli 命令重設管理員 URL。如果從管理員變更了管理 URL，但因錯誤而無法再存取管理員，這個功能就很有用。 |
@@ -414,7 +415,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 ## [!DNL Journey Optimizer] {#journey-opt}
 
-了解關於 [!DNL Journey Optimizer] 的最新發行資訊。在 Experience League 上查看最新的教學課程和知識庫支援文章。
+了解關於 [!DNL Journey Optimizer] 的最新發行資訊。在 Experience League 上檢視最新的教學課程和知識庫支援文章。
 
 +++詳細資訊
 
@@ -465,7 +466,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 +++詳細資訊
 
-* 有關發行說明和自助功能，請參閱 [[!DNL Journey Optimizer B2B Edition] 文件](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer-b2b/user/guide-overview)。
+* 請參閱 [[!DNL Journey Optimizer B2B Edition] 文件](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer-b2b/user/guide-overview) 以取得發行說明和自助服務。
 * 請參閱 [[!DNL Journey Optimizer B2B Edition]](https://business.adobe.com/products/journey-optimizer-b2b-edition.html) 以了解產品資訊。
 
 +++
@@ -676,7 +677,7 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 +++
 
-## 適用於企業的[!DNL Creative Cloud] {#creative-cloud}
+## 適用於企業的 [!DNL Creative Cloud] {#creative-cloud}
 
 針對 [!DNL Adobe Creative Cloud for enterprise] 應用程式的全新教學課程。
 
@@ -713,4 +714,3 @@ The [Experience Cloud Certification](https://experienceleague.adobe.com/en/docs/
 And more! Head over to [Adobe Certification](https://experienceleague.adobe.com/en/docs/certification/program/overview) on Experience League and start your certification journey today!
 
 +++ -->
-
