--- a/c-legacy-releases/2024/07172024.md
+++ b/c-legacy-releases/2024/07172024.md
@@ -34,7 +34,7 @@ ht-degree: 100%
 
 上次更新日期：**2024 年 8 月 2 日**
 
-* [[!DNL Experience League] 活動與最新訊息](#events)
+* [[!DNL Experience League] 活動和更新](#events)
 * [[!DNL Adobe System Status]](#status)
 * [[!DNL Adobe Experience Cloud] - 統一介面與管理](#ecloud)
 * [[!DNL Adobe Experience Platform]](#platform)
@@ -61,7 +61,7 @@ ht-degree: 100%
 * [Adobe 的認證](https://experienceleague.adobe.com/zh-hant/docs/certification/program/overview)
 * [Adobe 產品安全性漏洞](https://helpx.adobe.com/tw/security.html)
 
-## ![圖示](/assets/experience-league.png)[!DNL Experience League]活動與最新訊息 {#events}
+## ![圖示](/assets/experience-league.png)[!DNL Experience League]活動和更新 {#events}
 
 了解 Experience League 上的精彩活動。 若要向 Adobe 產品專家學習、與之互動或獲得解答，這是您絕佳的選擇！
 
@@ -100,13 +100,13 @@ ht-degree: 100%
 
 未更新。
 
-有關 Experience Cloud 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/experience-cloud) (包含[!UICONTROL 客戶屬性]、[!DNL Experience Cloud Assets]和[!UICONTROL 客群])。
+如需有關 Experience Cloud 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/experience-cloud) (包含[!UICONTROL 客戶屬性]、[!DNL Experience Cloud Assets]和[!UICONTROL 客群])。
 
 +++
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) [!DNL Experience Platform] {#platform}
 
-尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。查看 Experience League 上的新教學課程和知識庫。
+尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。檢視 Experience League 上的新教學課程和知識庫。
 
 +++詳細資訊
 
@@ -285,7 +285,7 @@ New articles and updates to existing articles for [!DNL Analytics].
 | 2024 年 6 月 | [ [!DNL Experience Fragments]  允許範本的繼承問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-21002) | 新文章 | [!DNL Adobe Experience Manager] 中的 [!DNL Experience Fragments] 允許範本繼承方面出現問題。 |
 | 2024 年 6 月 | [[!DNL Copy Content Activity]  失敗並出現 *[!DNL javax.jcr.AccessDeniedException]* 錯誤](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24424) | 新文章 | 了解在 [!DNL Adobe Experience Manager] 命名空間註冊期間，內容回流作業失敗並出現 *[!DNL javax.jcr.AccessDeniedException]* 錯誤的原因。 |
 | 2024 年 6 月 | [[!DNL Dynamic Media URL] 回應 [!DNL byte-size]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24461) | 新文章 | 了解如何從 [!DNL Dynamic Media Classic] 中的 [!DNL URL] 顯示原始轉譯時取得 DM 資產二進位大小。 |
-| 2024 年 6 月 | [[!DNL AEMaaCS]：如何使用管理員權限存取預覽層級的存放庫瀏覽器](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24457) | 新文章 | 了解如何使用自訂工作流程顯示所有節點，因為依預設，預覽層級的存放庫瀏覽器不會顯示 (例如 `/conf`、`/home` 和 `/var` 下的節點未顯示。所有節點。 |
+| 2024 年 6 月 | [[!DNL AEMaaCS]：如何使用管理員權限存取預覽層級的存放庫瀏覽器](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24457) | 新文章 | 了解如何使用自訂工作流程顯示所有節點，因為依預設，預覽層級的存放庫瀏覽器不會顯示所有節點 (例如 `/conf`、`/home` 和 `/var` 下的節點不會顯示。) |
 | 2024 年 6 月 | [[!DNL SDI] 內容遺失、 [!DNL Apache] 錯誤、*[!DNL INCLUDES filter removed]*](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24222) | 新文章 | 了解如何解決 [!DNL Sling Dynamic Includes (SDI)] 內容遺失且 [!DNL Apache] `error.log` 表示 *[!DNL INCLUDES filter removed]* 的問題。 |
 | 2024 年 6 月 | [啟用  [!DNL Geo-blocking]  和  [!DNL Dynamic Media CDN]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24475) | 新文章 | 了解如何在 [!DNL Dynamic Media CDN] 啟用 [!DNL Geo-blocking]，讓 [!DNL URLs] 僅在特定國家/地區提供。 |
 | 2024 年 6 月 | [[!DNL Adobe Experience Manager]：如何解鎖被其他使用者鎖定的頁面](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24486) | 新文章 | 了解當鎖定頁面的使用者和管理員都無法解鎖頁面時如何解鎖頁面。 |
@@ -358,7 +358,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 ### 最新 Campaign 產品版本
 
-* [!DNL Web User Interface]：**7 月 30 日** - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/campaign-web/v8/release-notes/release-notes) | [產品文件](https://experienceleague.adobe.com/zh-Hant/docs /campaign-web/v8/campaign-web-home)
+* [!DNL Web User Interface]：**7 月 30 日** - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/campaign-web/v8/release-notes/release-notes) | [產品文件](https://experienceleague.adobe.com/zh-hant/docs /campaign-web/v8/campaign-web-home)
 
 * [!DNL Campaign]v8：**7 月 30 日** - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/campaign-web/v8/release-notes/release-notes) | [產品文件](https://experienceleague.adobe.com/zh-hant/docs/campaign/campaign-v8/campaign-home)
 
@@ -402,7 +402,7 @@ New or updated videos tutorials published for Adobe Campaign.
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) [!DNL Journey Optimizer] {#journey-opt}
 
-了解關於 [!DNL Journey Optimizer] 的最新發行資訊。在 Experience League 上查看最新的教學課程和知識庫支援文章。
+了解關於 [!DNL Journey Optimizer] 的最新發行資訊。在 Experience League 上檢視最新的教學課程和知識庫支援文章。
 
 +++詳細資訊
 
@@ -568,7 +568,7 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 +++## ![圖示](/assets/experience-league.png) Adobe 內容供應鏈{#content-supply-chain}
 
-有關 Experience League 的最新教學課程，請參閱「[內容供應鏈](https://experienceleague.adobe.com/zh-hant/docs/content-supply-chain-learn/tutorials/overview)」。
+如需有關 Experience League 的最新教學課程，請參閱「[內容供應鏈](https://experienceleague.adobe.com/zh-hant/docs/content-supply-chain-learn/tutorials/overview)」。
 
 <!-- +++Details
 
