--- a/c-legacy-releases/2024/09122024.md
+++ b/c-legacy-releases/2024/09122024.md
@@ -1,5 +1,5 @@
 ---
-title: 發行說明 — 2024年9月至10月
+title: 發行說明 - 2024 年 9 月 - 10月
 description: 尋找 Adobe  [!DNL Experience Cloud]  產品和服務的最新發行說明和知識庫問題。了解有關 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
 doc-type: release notes
 last-update: October 2024
@@ -9,7 +9,7 @@ exl-id: 42cf0348-3fc1-4ec9-b12f-96bf395cadc6
 source-git-commit: fa7494e85ecd363d33a9cceceba5b01f82353495
 workflow-type: tm+mt
 source-wordcount: '3744'
-ht-degree: 98%
+ht-degree: 100%
 
 ---
 
@@ -28,9 +28,9 @@ ht-degree: 98%
 
 為了獲得最佳的自助體驗，請登入 [Experience League](https://experienceleague.adobe.com/#home)，並在 Adobe 免費的[文件](https://experienceleague.adobe.com/zh-hant/docs)、[課程](https://experienceleague.adobe.com/#courses)、[活動](https://experienceleague.adobe.com/events/)、[社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=en)和[支援](https://experienceleague.adobe.com/?support-tab=home#support)等資源庫中自訂您的搜尋體驗。
 
-**提供意見回饋**
+**提供意見反應**
 
-請在每個頁面底部的快顯視窗搜尋「**_此內容是否實用？_**」。您的意見回饋會經過剪輯並傳送給內容作者。
+請在每個頁面底部的快顯視窗搜尋「**_此內容是否實用？_**」。您的意見反應會經過整理後傳遞給內容作者。
 
 **接收通知**
 
@@ -38,9 +38,9 @@ ht-degree: 98%
 
 ## 2024 年 9 月至 10 月
 
-最近更新： **2024年10月10日**
+最近更新日期：**2024 年 10 月 10 日**
 
-* [[!DNL Experience League] 個活動和更新](#events) （更新日期： **10月10日**）
+* [[!DNL Experience League] 活動和更新](#events) (更新時間：**10 月 10 日**)
 * [[!DNL Adobe System Status]](#status)
 * [[!DNL Adobe Experience Cloud] - 統一介面與管理](#ecloud)
 * [[!DNL Adobe Experience Platform]](#platform)
@@ -68,7 +68,7 @@ ht-degree: 98%
 * [Adobe 的認證](https://experienceleague.adobe.com/zh-hant/docs/certification/program/overview)
 * [Adobe 產品安全性漏洞](https://helpx.adobe.com/tw/security.html)
 
-## ![圖示](/assets/experience-league.png)[!DNL Experience League]活動與最新訊息 {#events}
+## ![圖示](/assets/experience-league.png)[!DNL Experience League]活動和更新 {#events}
 
 了解 Experience League 上的精彩活動。 若要向 Adobe 產品專家學習、與之互動或獲得解答，這是您絕佳的選擇！
 
@@ -138,7 +138,7 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 | 發行日期 | 功能 | 說明 |
 | -----------| -----------| ---------- |
 | 10 年 9 月 | [!DNL Experience Cloud] 中的 [!DNL Slack] 通知 | 您可以設定帳戶偏好，以便傳送 [!DNL Experience Cloud] 通知至 Slack。請參閱[訂閱 Slack 通知](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/features/account-preferences)以了解詳細資料。 |
-| 10 月 2 日 | 可自訂的首頁 | 在 Experience Cloud 登陸頁面上，按一下&#x200B;**[!UICONTROL 編輯]**。您可以利用[!UICONTROL 編輯]模式來存取小工具程式庫和自訂背景，以便自訂 Experience Cloud 首頁。[!UICONTROL 編輯]模式提供順暢、直覺式的控制，用於移動、調整大小及管理Widget，包括大量動作和版面調整，提供更美觀且量身打造的體驗。透過存取Widget程式庫和自訂背景，可讓您設定Experience Cloud首頁。 |
+| 10 月 2 日 | 可自訂的首頁 | 在 Experience Cloud 登陸頁面上，按一下&#x200B;**[!UICONTROL 編輯]**。您可以利用[!UICONTROL 編輯]模式來存取小工具程式庫和自訂背景，以便自訂 Experience Cloud 首頁。[!UICONTROL 編輯]模式提供流暢、直觀的控制功能，讓您可以輕鬆移動、調整大小和管理小工具，包括批次動作和版面配置調整，提供更具美感和量身打造的體驗。您還可以透過小工具庫和自訂背景來個人化您的 Experience Cloud 主頁。 |
 
 如需有關 [!DNL Experience Cloud] 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/experience-cloud) (包括 [!UICONTROL Customer Attributes]、[!DNL Experience Cloud Assets] 和 [!UICONTROL Audiences])。
 
@@ -146,7 +146,7 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) [!DNL Experience Platform] {#platform}
 
-尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。查看 Experience League 上的新教學課程和知識庫。
+尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。檢視 Experience League 上的新教學課程和知識庫。
 
 +++詳細資訊
 
@@ -420,7 +420,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) [!DNL Journey Optimizer] {#journey-opt}
 
-了解關於 [!DNL Journey Optimizer] 的最新發行資訊。在 Experience League 上查看最新的教學課程和知識庫支援文章。
+了解關於 [!DNL Journey Optimizer] 的最新發行資訊。在 Experience League 上檢視最新的教學課程和知識庫支援文章。
 
 +++詳細資訊
 
@@ -451,7 +451,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 +++詳細資訊
 
-* 有關發行說明和自助功能，請參閱 [[!DNL Journey Optimizer B2B Edition] 文件](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer-b2b/user/guide-overview)。
+* 請參閱 [[!DNL Journey Optimizer B2B Edition] 文件](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer-b2b/user/guide-overview)，以取得發行說明和自助功能。
 * 請參閱 [[!DNL Journey Optimizer B2B Edition]](https://business.adobe.com/products/journey-optimizer-b2b-edition.html) 以了解產品資訊。
 
 +++
@@ -589,7 +589,7 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 +++## ![圖示](/assets/experience-league.png) Adobe 內容供應鏈{#content-supply-chain}
 
-有關 Experience League 的最新教學課程，請參閱「[內容供應鏈](https://experienceleague.adobe.com/zh-hant/docs/content-supply-chain-learn/tutorials/overview)」。
+如需有關 Experience League 的最新教學課程，請參閱「[內容供應鏈](https://experienceleague.adobe.com/zh-hant/docs/content-supply-chain-learn/tutorials/overview)」。
 
 <!-- +++Details
 
