Updated by task 'FY25_February_DX_RNs_HO1'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/137dc623cf4b283e8a18e609d6847b72a5f20aa7

--- a/c-legacy-releases/2025/01222025.md
+++ b/c-legacy-releases/2025/01222025.md
@@ -1,14 +1,14 @@
 ---
 title: 發行說明 - 2025 年 1 月
-description: 尋找 Adobe  [!DNL Experience Cloud]  產品和服務的最新發行說明和知識庫問題。了解有關 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
+description: 尋找 Adobe  [!DNL Experience Cloud]  產品和服務的最新發行說明和知識庫問題。了解 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
 doc-type: release notes
 last-update: January 2025
 author: mfrei
 mini-toc-levels: 2
 source-git-commit: a4b31560cffa6108997d67aad2bf9a82edd844d3
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '4139'
-ht-degree: 97%
+ht-degree: 100%
 
 ---
 
@@ -28,7 +28,7 @@ ht-degree: 97%
 
 **持續通知：**&#x200B;若要收到關於此頁面更新的每月電子郵件通知，請訂閱 [Adobe 優先產品更新](https://www.adobe.com/tw/subscription/priority-product-update.html)。
 
-**留下意見反應：**&#x200B;尋找「**_這些內容對您有幫助嗎？_** 每篇文章或影片底部的快顯視窗。您的意見反應會經過整理後傳遞給內容作者。
+**留下意見反應：**&#x200B;尋找每篇文章或影片底部的「**_這些內容對您有幫助嗎？_**」快顯視窗。您的意見反應會經過整理後傳遞給內容作者。
 
 ## 2025 年 1 月
 
@@ -38,7 +38,7 @@ ht-degree: 97%
 
 * [[!DNL Experience League] 活動和更新](#events)
 * [[!DNL Adobe System Status]](#status)
-* [[!DNL Adobe Experience Cloud]  — 中央介面和管理](#ecloud) （更新日期： **2月12日**）
+* [[!DNL Adobe Experience Cloud] - 中央介面與管理](#ecloud) (更新日期：**2 月 12 日**)
 * [[!DNL Adobe Experience Platform]](#platform)
 * [[!DNL Adobe Real-Time CDP]](#rtcdp)
 * [[!DNL Adobe Analytics]](#analytics)
@@ -60,31 +60,31 @@ ht-degree: 97%
 * [[!DNL Adobe Document Cloud]](#doc-cloud)
 * [[!DNL Adobe Creative Cloud for enterprise]](#creative-cloud)
 * [客戶資料管理 - 對話](#voices)
-* [Digital Experience 藍圖](#blueprints)
+* [數位體驗藍圖](#blueprints)
 * [Adobe 的認證](https://experienceleague.adobe.com/en/certification-home)
 * [Adobe 產品安全性漏洞](https://helpx.adobe.com/tw/security.html)
 
 ## [!DNL Experience League] 更新和活動 {#events}
 
-了解 Experience League 上的精彩活動。 若要向 Adobe 產品專家學習、與之互動或獲得解答，這是您絕佳的選擇！
+了解 Experience League 上的精彩活動。這裡是您向 Adobe 產品專家學習、與之互動或獲得解答的最佳場所！
 
-### Experience League更新（2025年2月）
+### Experience League 更新 (2025 年 2 月)
 
 +++詳細資訊
 
 **個人化首頁**
 
-發行日期：**2025年2月5日**
+發行日期：**2025 年 2 月 5 日**
 
-全新的[Experience League首頁](https://experienceleague.adobe.com/?lang=en)提供由[!DNL Adobe Target]支援的個人化學習推薦。
+全新的 [Experience League 首頁](https://experienceleague.adobe.com/?lang=en) 上會提供由 [!DNL Adobe Target] 所支援的個人化學習推薦內容。
 
 主要功能：
 
-* 根據角色、產品和最近活動的建議內容
+* 根據角色、產品和最近活動所推薦的內容
 * 最近檢視的內容
-* 建議的隨選事件與認證
-* 您產品的新發佈內容
-* 重新設計、重新整理的介面
+* 建議的隨選活動與認證
+* 針對您的產品最新發佈的內容
+* 經過重新設計的全新改版介面
 
 +++
 
@@ -92,9 +92,9 @@ ht-degree: 97%
 
 +++詳細資訊
 
-* **[!DNL Adobe Summit]** | _數位體驗會議_ | 加入同行的行列，聆聽可口可樂公司、JPMorganChase、ServiceNow等公司的主管意見。 | **3月18日至19日@ Las Vegas &amp; Online** | [註冊](https://summit.adobe.com/na/?promoid=G4FRYKWG&amp;mv=other)
+* **[!DNL Adobe Summit]** | _數位體驗大會_ | 與同行一起聆聽可口可樂公司、JPMorganChase、ServiceNow 等公司高階主管的演說。| **3 月 18 日至 19 日，於拉斯維加斯和線上舉行** | [報名](https://summit.adobe.com/na/?promoid=G4FRYKWG&amp;mv=other)
 
-檢視所有[即將舉行的活動](https://experienceleague.adobe.com/events/)或瀏覽關於 Experience League 的[過去活動錄影](https://experienceleague.adobe.com/zh-hant/docs/events/experience-league-recorded-events/overview)。
+檢視所有[即將舉行的活動](https://experienceleague.adobe.com/events/)或瀏覽關於 Experience League 的[過往活動錄影](https://experienceleague.adobe.com/zh-hant/docs/events/experience-league-recorded-events/overview)。
 
 +++
 
@@ -104,7 +104,7 @@ ht-degree: 97%
 
 +++詳細資訊
 
-[!DNL Adobe System Status] 會提供有關 Adobe 產品的詳細資訊、狀態更新和電子郵件通知。獲得有關服務中斷、作業中斷和維護事件的通知。請造訪 [status.adobe.com](https://status.adobe.com/) 來查看。
+[!DNL Adobe System Status] 提供有關 Adobe 產品的詳細資訊、狀態更新和電子郵件通知。收到有關服務中斷、作業中斷和維護事件的通知。請前往 [status.adobe.com](https://status.adobe.com/) 了解詳情。
 
 近期的發行說明請參閱這裡：
 
@@ -118,18 +118,18 @@ ht-degree: 97%
 
 +++
 
-## [!DNL Experience Cloud] - 統一介面與管理 {#ecloud}
+## [!DNL Experience Cloud] - 中央介面與管理 {#ecloud}
 
-了解關於 [!DNL Experience Cloud] 統一介面元件和管理。管理產品和使用者、配置輪廓的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
+了解 [!DNL Experience Cloud] 中央介面元件和管理。管理產品和使用者、配置設定檔的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
 
 +++詳細資訊
 
 | 日期 | 功能 | 說明 |
 | -----------| -----------| ---------- |
 | 9 年 1 月 | 產品使用資料 | 為了讓控制 [!DNL Experience Cloud] 產品使用資料喜好設定變得更簡單，我們簡化了 [!DNL Experience Cloud] [喜好設定](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/features/account-preferences)頁面，移除了重複的選項。透過這次簡化，我們保留了目前的使用者喜好設定，您可以隨時在 [Experience Cloud 喜好設定](https://experience.adobe.com/preferences)中更新您的喜好設定。 |
-| 2 月 13 日 (預計發行日期) | Spectrum 2 | 該 [!DNL Experience Cloud] 應用程式框架，包括標題列和從標題列存取的元件 (以及某些應用程式的左側導航欄)，將更新為 Spectrum 2。Spectrum 是 Adobe 的設計標準。這個更新設計包含了更新的圖示設計，但功能保持不變。然而，標題中的幾個元素已重新定位，以便與其他 Adobe 網站和應用程式保持一致。 |
+| 2 月 13 日 (預計發行日期) | Spectrum 2 | [!DNL Experience Cloud] 應用程式框架將更新為 Spectrum 2，包括標題列和從標題列存取的元件 (以及某些應用程式的左側導覽邊欄)。Spectrum 是 Adobe 的設計標準。這個更新設計包含了更新的圖示設計，但功能保持不變。然而，標題中的幾個元素已重新定位，以便與其他 Adobe 網站和應用程式保持一致。 |
 
-如需有關 [!DNL Experience Cloud] 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/experience-cloud) (包括 [!UICONTROL Customer Attributes]、[!DNL Experience Cloud Assets] 和 [!UICONTROL Audiences])。
+如需有關 [!DNL Experience Cloud] 中央介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/experience-cloud) (包括 [!UICONTROL Customer Attributes]、[!DNL Experience Cloud Assets] 和 [!UICONTROL Audiences])。
 
 +++
 
@@ -143,7 +143,7 @@ ht-degree: 97%
 
 * [[!DNL Experience Platform] Mobile SDK 發行說明](https://developer.adobe.com/client-sdks/documentation/release-notes/)
 
-### 新 [!DNL Experience Platform]教學課程{#tutorials-aep}
+### [!DNL Experience Platform] 最新教學課程{#tutorials-aep}
 
 在 Experience League 上發佈的全新 Adobe [!DNL Experience Platform] 教學課程。
 
@@ -160,13 +160,13 @@ ht-degree: 97%
 | 2024 年 11 月 | [解決透過  [!DNL AEP] [!DNL API] 刪除客群時出現的 *[!DNL UPAPI-113434-400]* 錯誤](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25337) | 新文章 | 了解如何解決嘗試透過 [!DNL Adobe Experience Platform (AEP)] [!DNL API] 刪除客群時出現的 *[!DNL UPAPI-113434-400]* 錯誤。 |
 | 2024 年 11 月 | [在  [!DNL Privacy Service API] 中建立包含多個使用者和身分識別類型的隱私請求](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25330) | 新文章 | 了解如何使用 [!DNL Privacy Service API] 建立包含多個使用者和身分識別類型的隱私 [!DNL JSON] 請求。 |
 | 2024 年 12 月 | [了解在  [!DNL Adobe Experience Platform]  標籤嵌入程式碼中使用  [!DNL HTTPS] 的變更](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-22265) | 新文章 | 了解當指令碼來源從 `//assets.adobedtm.com/xxxx` 變更為 `https://assets.adobedtm.com/xxxx` 時，是否需要更新 [!DNL Adobe Experience Platform Data Collection] (標籤) 的嵌入程式碼。 |
-| 2024 年 12 月 | [解決在  [!DNL Adobe Experience Platform] 中，針對  [!DNL Eloqua Destinations]  出現的 *[!DNL 400 BAD_REQUEST]* 啟動錯誤](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25463) | 新文章 | 了解如何解決在將客群從 [!DNL Adobe Experience Platform (AEP)] 啟動到 [!DNL Oracle Eloqua] [!DNL API] 型目的地時，發生 *[!DNL 400 BAD_REQUEST]* 錯誤的問題。 |
+| 2024 年 12 月 | [解決在  [!DNL Adobe Experience Platform] 中，針對  [!DNL Eloqua Destinations]  出現的 *[!DNL 400 BAD_REQUEST]* 啟動錯誤](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25463) | 新文章 | 了解如何解決在將客群從 [!DNL Adobe Experience Platform (AEP)] 啟動到 [!DNL Oracle Eloqua] [!DNL API] 型目標時，發生 *[!DNL 400 BAD_REQUEST]* 錯誤的問題。 |
 | 2024 年 12 月 | [無法為  [!DNL Adobe Experience Platform] 中的  [!DNL HTTP] [!DNL API] 來源新增更多帳戶](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25431) | 新文章 | 了解如何解決當錯誤發生，導致無法將多個 [!DNL HTTP] [!DNL API] 帳戶新增為來源的問題。 |
 | 2024 年 12 月 | [[!DNL Adobe Experience Platform]：雜湊電子郵件上的串流驗證失敗](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25489) | 新文章 | 了解如何解決雜湊電子郵件上的串流驗證失敗時出現的 [!DNL Adobe Experience Platform] 問題。 |
 | 2024 年 12 月 | [使用  [!DNL Privacy API]  在  [!DNL AEP] 中處理設定檔刪除請求時出現差異](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25442) | 新文章 | 了解如何解決使用 [!DNL privacy API] 處理設定檔刪除請求時出現的差異問題。 |
 | 2024 年 12 月 | 在導入  [!DNL AEP Notebooks] 中的  [!DNL DatasetWriter]  模組時，發生 [[!DNL ImportError] ](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25472) | 新文章 | 了解如何解決在 [!DNL Adobe Experience Platform Notebooks] 中使用 [!DNL DatasetWriter] 時發生 [!DNL ImportError] 的問題。 |
 | 2024 年 12 月 | [在  [!DNL Adobe Experience Platform] 中儘管有大量客群， [!DNL Facebook]  上顯示的客群規模仍然很小](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25440) | 新文章 | 了解如何解決當將客群細分群體從 [!DNL Adobe Experience Platform] 轉移到 [!DNL Facebook] 時，[!DNL Facebook] 上顯示的客群數量顯著小於 Adobe 中大型客群的問題。 |
-| 2024 年 12 月 | [無法將[!UICONTROL 細分群體]推送至  [!DNL Freewheel]  目的地](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25350) | 新文章 | 了解如何解決將客群[!UICONTROL 細分群體]從 [!DNL Adobe Experience Platform (AEP)] 推送到 [!DNL Freewheel] 目的地時出現的錯誤。 |
+| 2024 年 12 月 | [無法將[!UICONTROL 細分群體]推送至  [!DNL Freewheel]  目標](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25350) | 新文章 | 了解如何解決將客群[!UICONTROL 細分群體]從 [!DNL Adobe Experience Platform (AEP)] 推送到 [!DNL Freewheel] 目標時出現的錯誤。 |
 | 2024 年 12 月 | [在  [!DNL Adobe Experience Platform] 中存取非生產環境中的計算屬性](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25432) | 新文章 | 了解如何解決 [!DNL Adobe Experience Platform (AEP)] 非生產環境中無法存取計算屬性的問題。 |
 | 2024 年 12 月 | [[!DNL Adobe Experience Platform]：解決從  [!DNL Azure Data Factory] 串流資料時出現的 *[!DNL 500 Internal Server Error]* 錯誤](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25359) | 新文章 | 了解如何解決在將 [!DNL Azure Data Factory (ADF)] 與 [!DNL Adobe Experience Platform (AEP)] 整合時，由於重複的 [!DNL Content-Type] 標頭導致發生 *[!DNL 500 Internal Server Error]* 的問題。 |
 | 2024 年 12 月 | [[!DNL AEP]：鎖定的自訂欄位群組無法在綱要編輯器中進行編輯](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25400) | 新文章 | 了解如何透過修改 [!UICONTROL Data Types] 編輯器中的 `enum` 值來解決在 [!DNL Adobe Experience Platform] 的模式編輯器中，無法編輯鎖定自訂欄位群組的問題。 |
@@ -190,11 +190,11 @@ ht-degree: 97%
 
 ## [!DNL Analytics] {#analytics}
 
-如需 [!DNL Adobe Analytics] 和 [!DNL AppMeasurement] 的最新發行資訊檢視 Experience League 上的全新教學課程。
+尋找 [!DNL Adobe Analytics] 和 [!DNL AppMeasurement] 的最新發行資訊。檢視 Experience League 上的全新教學課程。
 
 +++詳細資訊
 
-[!DNL Analytics]最新發行日期： **2025年1月22日**
+[!DNL Analytics]發行日期：**2025 年 1 月 22 日**
 
 * [!DNL Analytics] [發行說明](https://experienceleague.adobe.com/zh-hant/docs/analytics/release-notes/latest)<!-- [release notes](https://experienceleague-review.corp.adobe.com/docs/analytics/release-notes/latest.html) -->
 
@@ -206,7 +206,7 @@ ht-degree: 97%
 
 * [JavaScript 適用的 AppMeasurement 發行說明](https://experienceleague.adobe.com/zh-hant/docs/analytics/implementation/appmeasurement-updates)
 
-### 新 [!DNL Analytics]教學課程 {#tutorials-analytics}
+### [!DNL Analytics] 最新教學課程 {#tutorials-analytics}
 
 在 Experience League 上發佈的全新 Adobe [!DNL Analytics] 教學課程。
 
@@ -215,7 +215,7 @@ ht-degree: 97%
 | 2025 年 1 月 | [Adobe  [!DNL Analytics] &amp; CJA：基礎到中級分析功能快速入門](https://experienceleague.adobe.com/zh-hant/docs/events/adobe-customer-success-webinar-recordings/2024/basic-to-intermediate-analysis-capabilities) | 活動 | 了解 Adobe [!DNL Analytics] 和 [!DNL Customer Journey Analytics]，重點介紹基礎到中級的分析功能。 |
 | 2025 年 1 月 | [AEP Web SDK 疑難排解、保證以及技巧與竅門](https://experienceleague.adobe.com/zh-hant/docs/events/tech-sessions/2024/rtcdp-office-hours-2024/aep-web-sdk-troubleshooting) | 活動 | 深入了解 [!DNL Experience Platform] (AEP) Web SDK 的疑難排解、保證以及技巧與竅門。 |
 
-### 新增 Adobe [!DNL Analytics] 支援知識庫{#kb-analytics}
+### 新的 Adobe [!DNL Analytics] 支援知識庫{#kb-analytics}
 
 [!DNL Analytics] 的新文章和現有文章的更新。
 
@@ -228,11 +228,11 @@ ht-degree: 97%
 
 ## [!DNL Customer Journey Analytics] {#cja}
 
-如需 [!DNL Customer Journey Analytics] 的最新發行資訊。檢視 Experience League 上的全新教學課程。
+尋找 [!DNL Customer Journey Analytics] 的最新發行資訊。檢視 Experience League 上的全新教學課程。
 
 +++詳細資訊
 
-[!DNL Customer Journey Analytics]最新發行日期： **2025年1月22日**
+[!DNL Customer Journey Analytics]發行日期：**2025 年 1 月 22 日**
 
 * [!DNL Customer Journey Analytics] [發行說明](https://experienceleague.adobe.com/zh-hant/docs/analytics-platform/using/releases/latest#releases)<!-- [release notes](https://experienceleague-review.corp.adobe.com/docs/analytics-platform/using/releases/latest.html) -->
 
@@ -250,7 +250,7 @@ New tutorials published for [!DNL Customer Journey Analytics].
 
 ## [!DNL Streaming Media Analytics] {#sma}
 
-如需 [!DNL Streaming Media Analytics] 的最新發行資訊。檢視 Experience League 上的全新教學課程。
+尋找 [!DNL Streaming Media Analytics] 的最新發行資訊。檢視 Experience League 上的全新教學課程。
 
 +++詳細資訊
 
@@ -283,7 +283,7 @@ New tutorials published for [!DNL Customer Journey Analytics].
 * [[!DNL Experience Manager] 桌面應用程式發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-desktop-app/using/release-notes)
 * [[!DNL Experience Manager] Dispatcher 發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-dispatcher/using/getting-started/release-notes)
 
-### 新 [!DNL Experience Manager]教學課程 {#tutorials-aem}
+### [!DNL Experience Manager] 最新教學課程 {#tutorials-aem}
 
 [!DNL Experience Manager] 上的全新 [!DNL Experience Manager] 教學課程
 
@@ -293,7 +293,7 @@ New tutorials published for [!DNL Customer Journey Analytics].
 | 2025 年 1 月 | [!DNL AEM Sites] | [Cloud 5 - 與 Google 地圖整合](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-learn/cloud-service/expert-resources/cloud-5/season-4/cloud5-google-maps#_blank) | 影片 | 從前線的故事中探索，了解如何將 Edge Delivery Services 與 Google 地圖整合，以及如何透過整合來最佳化效能。 |
 | 2025 年 1 月 | [!DNL AEM Sites] | [Cloud 5 - Edge Delivery Services 的開發最佳做法](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-learn/cloud-service/expert-resources/cloud-5/season-4/cloud5-edge-delivery-services-best-practices#_blank) | 影片 | 與資深架構師一起探索在 Edge Delivery Services 中開發的技術。Kiran 將帶您了解他在專案中面臨的許多問題，以及如何解決這些問題。 |
 | 2025 年 1 月 | [!DNL AEM CS] | [從網頁應用程式中調用基於 OpenAPI 的 AEM API，並進行使用者驗證。](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-learn/cloud-service/aem-apis/invoke-openapi-based-aem-apis-from-web-app#setup-and-run-web-app) | 影片 | 了解如何使用來自外部網頁應用程式的 OAuth Web App 驗證，透過基於 OpenAPI 的 AEM API 在 AEM as a Cloud Service 中進行使用者驗證。 |
-| 2025 年 1 月 | [!DNL ADM Assets] | [內容憑證](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-learn/assets/advanced/content-credentials) | 影片 | 了解 AEM Assets 內容憑證如何提供可驗證的中繼資料，以確保數位資產的真實性和完整性，並促進內容創作中的信任與透明度。 |
+| 2025 年 1 月 | [!DNL ADM Assets] | [內容認證](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-learn/assets/advanced/content-credentials) | 影片 | 了解 AEM Assets 內容認證如何提供可驗證的中繼資料，以確保數位資產的真實性和完整性，並促進內容創作中的信任與透明度。 |
 | 2025 年 1 月 | [!DNL AEM Forms] | [將 Turnstile CAPTCHA 與 Adaptive Forms 整合](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/add-components-to-an-adaptive-form/integrate-adaptive-forms-turnstile) | 影片 | 輕鬆使用 Turnstile 服務增強表單安全性。裡面有詳細的逐步指南！ |
 
 ### 新的 [!DNL Experience Manager] 支援知識庫{#kb-aem}
@@ -404,13 +404,13 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 * [!DNL Campaign Standard]：[25.1 - 2025 發行說明](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard/using/release-notes/release-notes) | [產品文件](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard/using/campaign-standard-home)
 
-### 新 [!DNL Campaign]教學課程 {#tutorials-campaign}
+### [!DNL Campaign] 最新教學課程 {#tutorials-campaign}
 
 新的和更新的 Adobe Campaign 影片教學課程。
 
 | 發佈日期 | 應用程式 | 名稱 | 類型 | 說明 |
 | ----------| ---------- | ---------- | ---------- |---------- |
-| 2025 年 1 月 | | [建立和管理測試輪廓](https://experienceleague.adobe.com/zh-hant/docs/campaign-web-learn/tutorials/profiles-and-audiences/create-and-manage-test-profiles) | 影片 | 了解如何在用戶端主控台中建立測試設定檔，以及如何在 Adobe Campaign Web UI 中管理和編輯設定檔。 |
+| 2025 年 1 月 | | [建立和管理測試設定檔](https://experienceleague.adobe.com/zh-hant/docs/campaign-web-learn/tutorials/profiles-and-audiences/create-and-manage-test-profiles) | 影片 | 了解如何在用戶端主控台中建立測試設定檔，以及如何在 Adobe Campaign Web UI 中管理和編輯設定檔。 |
 | 2025 年 1 月 | | [透過動態內容增強傳遞](https://experienceleague.adobe.com/zh-hant/docs/campaign-web-learn/tutorials/content-management/enhance-a-delivery-with-dynamic-content) | 影片 | 了解如何使用運算式編輯器來個人化您的訊息或新增條件內容，藉以製作動態訊息內容。 |
 
 ### 新的 [!DNL Campaign] 支援知識庫{#kb-campaign}
@@ -441,7 +441,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 ## [!DNL Journey Optimizer] {#journey-opt}
 
-了解關於 [!DNL Journey Optimizer] 的最新發行資訊。在 Experience League 上檢視最新的教學課程和知識庫支援文章。
+了解 [!DNL Journey Optimizer] 的最新發行資訊。在 Experience League 上檢視最新的教學課程和知識庫支援文章。
 
 +++詳細資訊
 
@@ -647,7 +647,7 @@ New articles and updates to existing articles for [!DNL Workfront].
 | 發佈日期 | 應用程式 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |---------- |
 | 2025 年 1 月 | Acrobat、Adobe Express | [設計新頁面](https://experienceleague.adobe.com/zh-hant/docs/document-cloud-learn/acrobat-learning/getting-started/add-custom-page) | 影片 | 了解如何使用 Adobe Express 打造新的 PDF 專業頁面。透過設計新頁面，您只需幾分鐘便能創造出與眾不同、具有專業外觀的品牌客製化內容。本影片教學使用新的「[工作區體驗](https://experienceleague.adobe.com/zh-hant/docs/document-cloud-learn/acrobat-learning/getting-started/new-workspace)」。 |
-| 2025 年 1 月 | Acrobat、Adobe Express | [即時共同作業](https://experienceleague.adobe.com/docs/document-cloud-learn/acrobat-learning/getting-started/collaborate.html) | 影片 | 隨著遠端工作無所不在，無縫共同作業對於快速和大規模地交付內容至關重要。 隨時隨地即時收集註釋、共同處理回應及追蹤文件的進度，推展您的專案。了解如何建立一個不僅能提升效率，還能提高內容品質的文件審查程序。本影片教學使用新的「[工作區體驗](https://experienceleague.adobe.com/zh-hant/docs/document-cloud-learn/acrobat-learning/getting-started/new-workspace)」。 |
+| 2025 年 1 月 | Acrobat、Adobe Express | [即時共同作業](https://experienceleague.adobe.com/docs/document-cloud-learn/acrobat-learning/getting-started/collaborate.html) | 影片 | 隨著遠端工作無所不在，無縫共同作業對於快速和大規模地交付內容至關重要。隨時隨地即時收集註釋、共同處理回應及追蹤文件的進度，推展您的專案。了解如何建立一個不僅能提升效率，還能提高內容品質的文件審查程序。本影片教學使用新的「[工作區體驗](https://experienceleague.adobe.com/zh-hant/docs/document-cloud-learn/acrobat-learning/getting-started/new-workspace)」。 |
 
 如需 [!DNL Document Cloud] 教學課程，請參閱：
 
@@ -672,7 +672,7 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 身為客戶資料管理技術和行銷實務主管和專家的您，[客戶資料管理對話](https://experienceleague.adobe.com/zh-hant/docs/events/customer-data-management-voices-recordings/overview)是您的最終目的地。此教學課程集合是您聆聽同行的意見、獲取靈感並了解 MarTech 中發展的一站式中心。不用報名，按一下即可觀看。
 
-## Digital Experience 藍圖 {#blueprints}
+## 數位體驗藍圖 {#blueprints}
 
 [數位體驗藍圖](https://experienceleague.adobe.com/zh-hant/docs/blueprints-learn/architecture/overview)是可重複的實施，可讓您處理策略，並快速解決既定的業務問題。每個藍圖都提供一系列成品，解釋高價值業務問題、架構、實施步驟、技術考量以及相關文件的連結。
 
